Add OSSRH support